Fix margins on mobile

--- a/style.css
+++ b/style.css
@@ -198,6 +198,18 @@ section {
         justify-content: center;
         align-items: center;
         max-height: 600px;
+        margin: 50px 30px 30px 30px;
+    }
+}
+
+@media only screen and (max-width : 600px) {
+    .project-card {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        max-height: 600px;
+        margin: 50px 10px 50px 10px;
     }
 }
 
